--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.application.name=jaatm-bea
 
 #root context
-server.servlet.context-path=/stroller
+server.servlet.context-path=/jaatm-bea
 server.port=11100
 
 #Actuator end points to expose
