add debug log level to dev profile

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,8 @@
 spring.application.name=jaatm-bea
 
+# Application logs
+logging.level.za.co.ashtech.jaatm.bea=DEBUG
+
 #root context
 server.servlet.context-path=/jaatm-bea
 server.port=11100
