--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,4 +23,4 @@ spring.datasource.password=
 # JPA settings
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
