--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml Ddependency-check.skip=true -Dspring.profiles.active=dev 
+      run: mvn -B package --file pom.xml -Ddependency-check.skip=true -Dspring.profiles.active=dev 
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
